# TestTheBest

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  KnowledgeTest  TestTheBest.properties  build.sh  formatsources.sh  prepare.sh  rebuild.sh  startTestTheBest.sh
TestTheBestApp/: CMakeLists.txt
TestTheBestApp/include/: TestDialogFactory.h  TestDialogFactoryImpl.h  TestItemFactory.h  TestItemFactoryImpl.h  TestItemListFactory.h  TestItemListFactoryImpl.h
TestTheBestApp/include/testfactories/: TestItemFactory.h  TestItemFactoryImpl.h  TestItemListFactory.h
TestTheBestApp/include/testitems/: MultipleChoiceTestItem.h  TestItem.h  TestItemAddition.h  TestItemAlgebraLinearFactorization.h  TestItemAlgebraLinearFactorization3.h  TestItemAlgebraLogarithmRules.h  TestItemAlgebraQuadraticEquation.h  TestItemAnalyticGeometry2DLineLineIntersection.h  TestItemAnalyticGeometryLinePlaneIntersection.h  TestItemArithmeticAddition.h  TestItemArithmeticSubstraction.h  TestItemDifferentialRules.h  TestItemFunctionsInverse.h  TestItemIntegralDefinite.h  TestItemIntegralRules.h  TestItemStereoCalculations.h  TestItemStereoRules.h  TestItemStereoSphereSurfaceVolume.h  TestItemStereoSphereVolume.h  TestItemStochasticBernoulliExperiment.h  TestItemStochasticCombination.h  TestItemTrigonometryRules.h  TestItemVectorCrossProduct.h  TestItemVectorDotProduct.h
TestTheBestApp/include/testitems/algebra/: TestItemAlgebraLinearFactorization.h  TestItemAlgebraLinearFactorization3.h  TestItemQuadraticEquation.h
TestTheBestApp/include/testitems/common/: MultipleChoiceTestItem.h
TestTheBestApp/include/testitems/integral/: TestItemDefiniteIntegral.h  TestItemIntegralRules.h
TestTheBestApp/include/testitems/stereometry/: TestItemStereoSphereVolume.h
TestTheBestApp/include/testitems/stochastic/: TestItemStochasticBernoulliExperiment.h
TestTheBestApp/include/testitems/vectors/: TestItemVectorCrossProduct.h
TestTheBestApp/include/utils/: MathUtils.h  TestUtils.h  Utils.h
TestTheBestApp/src/: CodeGen.cpp  TestDialogFactoryImpl.cpp  TestItemFactoryImpl.cpp  TestItemListFactory.cpp  TestItemListFactoryImpl.cpp  TestTheBestApp.cpp
TestTheBestApp/src/testfactories/: TestItemFactoryImpl.cpp  TestItemListFactory.cpp  TestItemListFactoryImpl.cpp
TestTheBestApp/src/testitems/: TestItemAddition.cpp  TestItemAlgebraLinearFactorization.cpp  TestItemAlgebraLinearFactorization3.cpp  TestItemAlgebraLogarithmRules.cpp  TestItemAlgebraQuadraticEquation.cpp  TestItemAnalyticGeometry2DLineLineIntersection.cpp  TestItemAnalyticGeometryLinePlaneIntersection.cpp  TestItemArithmeticAddition.cpp  TestItemArithmeticSubstraction.cpp  TestItemDifferentialRules.cpp  TestItemFunctionsInverse.cpp  TestItemIntegralDefinite.cpp  TestItemIntegralRules.cpp  TestItemStereoCalculations.cpp  TestItemStereoRules.cpp  TestItemStereoSphereSurfaceVolume.cpp  TestItemStereoSphereVolume.cpp  TestItemStochasticBernoulliExperiment.cpp  TestItemStochasticCombination.cpp  TestItemTrigonometryRules.cpp  TestItemVectorCrossProduct.cpp  TestItemVectorDotProduct.cpp
TestTheBestApp/src/testitems/algebra/: TestItemAlgebraLinearFactorization.cpp  TestItemAlgebraLinearFactorization3.cpp  TestItemAlgebraQuadraticEquation.cpp  TestItemQuadraticEquation.cpp
TestTheBestApp/src/testitems/differential/: TestItemDifferentialRules.cpp
TestTheBestApp/src/testitems/integral/: TestItemDefiniteIntegral.cpp  TestItemIntegralRules.cpp
TestTheBestApp/src/testitems/stereometry/: TestItemStereoSphereSurfaceVolume.cpp  TestItemStereoSphereVolume.cpp
TestTheBestApp/src/testitems/stochastic/: TestItemStochasticBernoulliExperiment.cpp  TestItemStochasticCombination.cpp
TestTheBestApp/src/testitems/vectors/: TestItemVectorCrossProduct.cpp
TestTheBestApp/src/utils/: MathUtils.cpp  TestUtils.cpp  Utils.cpp
TestTheBestLib/: CMakeLists.txt
TestTheBestLib/include/testfactories/: TestDialogFactoryImpl.h  TestItemFactory.h  TestItemFactoryImpl.h  TestItemListFactory.h  TestItemListFactoryImpl.h
TestTheBestLib/include/testitems/: TestItemAlgebraLinearFactorization.h  TestItemAlgebraLinearFactorization3.h  TestItemAlgebraLogarithmRules.h  TestItemAlgebraQuadraticEquation.h  TestItemAnalyticGeometry2DLineLineIntersection.h  TestItemAnalyticGeometryLinePlaneIntersection.h  TestItemArithmeticAddition.h  TestItemArithmeticSubstraction.h  TestItemDifferentialRules.h  TestItemFunctionsInverse.h  TestItemIntegralDefinite.h  TestItemIntegralRules.h  TestItemStereoCalculations.h  TestItemStereoRules.h  TestItemStereoSphereSurfaceVolume.h  TestItemStereoSphereVolume.h  TestItemStochasticBernoulliExperiment.h  TestItemStochasticBinomDistFormulas.h  TestItemStochasticBinomDistProbabDist.h  TestItemStochasticCombination.h  TestItemTrigonometryRules.h  TestItemVectorCrossProduct.h  TestItemVectorDotProduct.h
TestTheBestLib/include/utils/: MathUtils.h  StringUtils.h
TestTheBestLib/src/testfactories/: TestDialogFactoryImpl.cpp  TestItemListFactory.cpp  TestItemListFactoryImpl.cpp
TestTheBestLib/src/testitems/: TestItemAlgebraLinearFactorization.cpp  TestItemAlgebraLinearFactorization3.cpp  TestItemAlgebraLogarithmRules.cpp  TestItemAlgebraQuadraticEquation.cpp  TestItemAnalyticGeometry2DLineLineIntersection.cpp  TestItemAnalyticGeometryLinePlaneIntersection.cpp  TestItemArithmeticAddition.cpp  TestItemArithmeticSubstraction.cpp  TestItemDifferentialRules.cpp  TestItemFunctionsInverse.cpp  TestItemIntegralDefinite.cpp  TestItemIntegralRules.cpp  TestItemStereoCalculations.cpp  TestItemStereoRules.cpp  TestItemStereoSphereSurfaceVolume.cpp  TestItemStereoSphereVolume.cpp  TestItemStochasticBernoulliExperiment.cpp  TestItemStochasticBinomDistFormulas.cpp  TestItemStochasticBinomDistProbabDist.cpp  TestItemStochasticCombination.cpp  TestItemTrigonometryRules.cpp  TestItemVectorCrossProduct.cpp  TestItemVectorDotProduct.cpp
TestTheBestLib/src/utils/: MathUtils.cpp  StringUtils.cpp
(+6 files in other folders)
